# MCP-Project

./: .env  Dockerfile  client(MCP).py  client(Pure).py  docker-compose.yml  pyproject.toml  rag.py  requirements.txt  server.py
db/: init.sql
