[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.2.0",
    "dashscope",
    "httpx>=0.28.1",
    "mcp>=1.6.0",
    "openai>=1.74.0",
    "pip-tools>=7.4.1",
    "python-dotenv>=1.1.0",
]

[tool.uv.workspace]
members = [
    "Dockerfile",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
